fix issue with pom

--- a/hello-world/pom.xml
+++ b/hello-world/pom.xml
@@ -43,7 +43,7 @@
                         <org>${sap.cloud.org}</org>
                         <appname>kayify-qa</appname>
                         <memory>512</memory>
-                        <diskQuota>512/diskQuota>
+                        <diskQuota>512</diskQuota>
                     </configuration>
                     <executions>
                         <execution>
