--- a/hello-world/pom.xml
+++ b/hello-world/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>..</relativePath>
     </parent>
 
-    <artifactId>kaify</artifactId>
+    <artifactId>kayify</artifactId>
     <packaging>war</packaging>
 
     <build>
